--- a/SpecFlowWithSelenium/SpecFlowWithSelenium/SpecFlowWithSelenium.csproj
+++ b/SpecFlowWithSelenium/SpecFlowWithSelenium/SpecFlowWithSelenium.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core.Linq" Version="1.0.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Selenium.Support" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="97.0.4692.7100" />
     <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
